benefits border fix on mobile

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -15,12 +15,6 @@
 	text-decoration: none;
 	width: auto;
 
-	span {
-		display: block;
-		height: 100%;
-		width: 100%;
-	}
-
 	&--primary {
 		background: linear-gradient(103.65deg, #a30fbb 26.04%, #ce0a16 78.62%);
 		color: #fff;
