--- a/styles/_utility.scss
+++ b/styles/_utility.scss
@@ -2,3 +2,15 @@
 	font-family: "Mulish", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-feature-settings: "liga", "clig";
 }
+
+.hidden-on-desktop {
+	@media only screen and (min-width: 768px) {
+		display: none;
+	}
+}
+
+.hidden-on-mobile {
+	@media only screen and (max-width: 768px) {
+		display: none;
+	}
+}
